== Affiliates - Changelog ==

= 2.18.0 =
* Enhanced the precision with which referral values are stored.
* Added the affiliates_get_referral_amount_decimals() function.
* Fixed the affiliates_referral_amount_decimals filter.
* We now allow to define the constant AFFILIATES_REFERRAL_AMOUNT_DECIMALS in wp-config.php.

= 2.17.1 =
* Fixed user_agents table is not deleted on cleanup.
* Fixed an issue related to showing earnings for certain dates.
* Improved the traffic queries which solves performance issues with large data sets.

= 2.17.0 =
* Added a new Traffic section with URI stats.
* Source URIs and landing URIs are stored for hits on affiliate links.
* User agents are stored for hits on affiliate links.
* Hit stats now show user agents in the Visits & Referrals section.
* Hit stats now show source and landing URIs in the Visits & Referrals section.
* Hit stats now show user agents in the Affiliates & Referrals section.
* Hit stats now show source and landing URIs in the Affiliates & Referrals section.
* Added hit references for referrals.
* Improved request handling to exclude during AJAX.

= 2.16.7 =
* Changing the username related to an affiliate if the username doesn't exist shows an error.
* Added notifications when add/edit/remove affiliates from the dashboard.

= 2.16.6 =
* Totals : allow to filter by affiliate status.
* WordPress 4.7 compatibility tested.

= 2.16.5 =
* Rendering amounts more consistently in dashboard widget.
* Updated some Italian translations.

= 2.16.4 =
* Fixed an issue with the WooCommerce customer registration option.

= 2.16.3 =
* Updated the French translation.

= 2.16.2 =
* Updated the German translation.
* Updated the Spanish translation.
* Fixed wording in notifications.

= 2.16.1 =
* Updated pot and translation files.
* Updated the Spanish translation.

= 2.16.0 =
* Added the possibility to approve new affiliates with a status option.