@@ -355,6 +355,7 @@ See the [Documentation](http://docs.itthinx.com/document/affiliates/) for more d
 * Added the affiliates_get_referral_amount_decimals() function.
 * Fixed the affiliates_referral_amount_decimals filter.
 * We now allow to define the constant AFFILIATES_REFERRAL_AMOUNT_DECIMALS in wp-config.php.
+* Added the AFFILIATES_REFERRAL_AMOUNT_DECIMALS_DISPLAY constant which can also be overridden in wp-config.php.
 
 = 2.17.1 =
 * Fixed user_agents table is not deleted on cleanup.
